--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,14 +5,12 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: ubuntu-latest
+    # see https://github.com/jtroe/cicd-container-images
+    # and https://github.com/jtroe/cicd-container-images/blob/main/python/arcgis-2.1.0-Conda.Linux.Dockerfile
+    container: ghcr.io/jtroe/cicd-container-images/arcgis-conda:2.1.0
     steps:
       - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content
-
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9' # install the python version needed
+        uses: actions/checkout@v3 # checkout the repository content
 
       - name: install python packages
         run: |
