--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,4 +18,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: execute py script # run main.py
+        env:
+          AGOL_ACCOUNT: ${{ secrets.AGOL_ACCOUNT }}
+          AGOL_CREDS: ${{ secrets.AGOL_CREDS }}
         run: python main.py
